--- a/style_kopia.css
+++ b/style_kopia.css
@@ -5,7 +5,6 @@
 }
 
 body {
-	margin: 80px;
 	font-size: 36px;
 	height: 100vh;
 	font-family: "Montserrat", sans-serif;
@@ -13,29 +12,14 @@ body {
 	background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
 }
 
-table {
-	border-spacing: 0;
+div {
+	background-color: lime;
 }
 
-table,
-td,
-th {
-	border: 1px solid black;
+p {
+	background-color: gold;
 }
 
-td,
-th {
-	padding: 5px 20px;
-}
-
-thead {
+span {
 	background-color: tomato;
-}
-
-tbody {
-	background-color: #fff;
-}
-
-tfoot {
-	background-color: royalblue;
 }
