--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body {
 	background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
 }
 
+p {
+	color: white;
+	font-size: 60px;
+}
+
 table {
 	border-spacing: 0;
 }
